<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvLiveData"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/layoutLiveData"
    android:layout_marginHorizontal="@dimen/default_padding_minimum"
    android:layout_marginTop="@dimen/default_margin"
    android:layout_marginBottom="@dimen/default_padding_minimum"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/tvBuildingEnergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:gravity="center"
            android:text="@string/statistics_of_each_source"
            android:textSize="@dimen/default_font_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        style="@style/TextViewCards"
                        android:text="@string/solar_power" />

                    <TextView
                        android:id="@+id/tvSolarPower"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 %" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        style="@style/TextViewCards"
                        android:text="@string/quasar_power" />

                    <TextView
                        android:id="@+id/tvQuasarPower"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 %" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/default_padding_minimum"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        style="@style/TextViewCards"
                        android:text="@string/grid_power" />

                    <TextView
                        android:id="@+id/tvGridPower"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 %" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_above="@+id/seekBar1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/view_last_20_details"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/default_font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAllViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_all_details"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/default_font_size_large"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>