<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvLiveData"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/layoutQuasar"
    android:layout_marginHorizontal="@dimen/default_padding_minimum"
    android:layout_marginTop="@dimen/default_margin"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:gravity="center"
            android:text="@string/live_data"
            android:textSize="@dimen/default_font_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        style="@style/TextViewCards"
                        android:text="@string/solar_power" />

                    <TextView
                        android:id="@+id/tvSolarPower"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 kW" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        style="@style/TextViewCards"
                        android:text="@string/quasar_power" />

                    <TextView
                        android:id="@+id/tvQuasarPower"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 kW" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/default_padding_minimum"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        style="@style/TextViewCards"
                        android:text="@string/grid_power" />

                    <TextView
                        android:id="@+id/tvGridPower"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 kW" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_half"
                        android:autoSizeMinTextSize="10sp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/building_demand"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvBuildingDemand"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 kW" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        style="@style/TextViewCards"
                        android:text="@string/total_energy" />

                    <TextView
                        android:id="@+id/tvTotalEnergy"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 kW" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardLiveData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_padding_minimum"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding_minimum">

                    <TextView
                        style="@style/TextViewCards"
                        android:text="@string/current_energy" />

                    <TextView
                        android:id="@+id/tvCurrentEnergy"
                        style="@style/TextViewCards"
                        android:layout_marginBottom="@dimen/default_margin_half"
                        tools:text="25 kW" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>